--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ OPENAI_API_KEY=your-openai-api-key-here
 GOOGLE_CLIENT_ID=762025710325-so5a0cv6v6aqu94rreeo4k66pe8kg10p.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 FRONTEND_URL=https://pdf-qcm-generator-x7ndp57u.devinapps.com
+BACKEND_URL=https://pdf-qcm-generator-tunnel-ox62185z.devinapps.com
