--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ GOOGLE_CLIENT_ID=762025710325-so5a0cv6v6aqu94rreeo4k66pe8kg10p.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 FRONTEND_URL=https://pdf-qcm-generator-x7ndp57u.devinapps.com
 BACKEND_URL=https://pdf-qcm-generator-tunnel-ox62185z.devinapps.com
+SENDGRID_API_KEY=SG.xxxxxxxx.yyyyyyyy
+SENDGRID_FROM=contact@tondomaine.com
