--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,9 @@ FRONTEND_URL=https://pdf-qcm-generator-x7ndp57u.devinapps.com
 BACKEND_URL=https://pdf-qcm-generator-tunnel-ox62185z.devinapps.com
 SENDGRID_API_KEY=SG.xxxxxxxx.yyyyyyyy
 SENDGRID_FROM=contact@tondomaine.com
+SMTP_HOST=jinane-consulting.com
+SMTP_PORT=587
+SMTP_TLS=true
+SMTP_USER=jchraa@jinane-consulting.com
+SMTP_PASSWORD=ton_mot_de_passe
+SMTP_FROM=jinane-consulting.com
