--- a/backend/.env
+++ b/backend/.env
@@ -11,5 +11,5 @@ SMTP_HOST=jinane-consulting.com
 SMTP_PORT=587
 SMTP_TLS=true
 SMTP_USER=jchraa@jinane-consulting.com
-SMTP_PASSWORD=ton_mot_de_passe
+SMTP_PASSWORD=tiwz cdvo zqgo bmsu
 SMTP_FROM=jinane-consulting.com
