--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://app-enajovig.fly.dev
+VITE_API_URL=http://localhost:8000
+VITE_API_BASIC_AUTH=user:f6f93d86265ff53a7a7e0ac885597bf3
