--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = migrations
-sqlalchemy.url = sqlite:///./test.db
+sqlalchemy.url = sqlite:///./test.db  # Remplacez aiosqlite par sqlite standard
 
 [loggers]
 keys = root,sqlalchemy,alembic
