--- a/.gitignore
+++ b/.gitignore
@@ -27,16 +27,45 @@ dist-ssr
 
 # Environnement virtuel
 venv/
+.venv/
+env/
+ENV/
+virtualenv/
+**/venv/
+**/.venv/
+**/env/
+**/.env/
+**/virtualenv/
+python?-venv/
 
 # Cache Python
 __pycache__/
 **/__pycache__/
 *.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # DB temporaire
 test.db
+*.db
+*.sqlite3
 
 # Ignore le fichier .env
 backend/.env
-
+.env
 .env.local
