Mise en place des tests front

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,11 +8,16 @@
       "path": "./tsconfig.node.json"
     }
   ],
-  "compilerOptions": {
+ "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": [
+      "vitest/globals",
+      "@testing-library/jest-dom",
+      "node"
+    ]
   }
 }
 
